--- a/src/Vistas/ViewGestionDeAlumnos.form
+++ b/src/Vistas/ViewGestionDeAlumnos.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-      <Color blue="0" green="66" red="0" type="rgb"/>
+      <Color blue="8d" green="97" red="16" type="rgb"/>
     </Property>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
@@ -31,19 +31,21 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="label2" max="32767" attributes="0"/>
+                      <Component id="label3" max="32767" attributes="0"/>
+                      <Component id="label5" alignment="0" max="32767" attributes="0"/>
+                      <Component id="label4" alignment="0" max="32767" attributes="0"/>
+                      <Component id="label1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Component id="jBNuevo" alignment="0" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="label2" max="32767" attributes="0"/>
-                          <Component id="label3" max="32767" attributes="0"/>
-                          <Component id="label5" alignment="0" max="32767" attributes="0"/>
-                          <Component id="label4" alignment="0" max="32767" attributes="0"/>
-                          <Component id="label1" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="jTDoc" pref="163" max="32767" attributes="0"/>
                           <Component id="jTnombre" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jBGuardar" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="jREstado" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jDFecha" alignment="0" pref="163" max="32767" attributes="0"/>
                           <Component id="jTapellido" alignment="0" max="32767" attributes="0"/>
@@ -52,10 +54,10 @@
                       <Component id="jBbuscar" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <Component id="jBNuevo" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
                       <Component id="jBEliminar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
+                      <Component id="jBGuardar" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                       <Component id="jBSalir" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -103,7 +105,7 @@
                   <Component id="label5" min="-2" max="-2" attributes="0"/>
                   <Component id="jDFecha" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="48" max="32767" attributes="0"/>
+              <EmptySpace pref="52" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jBNuevo" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jBEliminar" alignment="3" min="-2" max="-2" attributes="0"/>
