--- a/src/Vistas/ViewConsultDeAlumnosPorMateria.form
+++ b/src/Vistas/ViewConsultDeAlumnosPorMateria.form
@@ -5,6 +5,7 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="0" green="66" red="0" type="rgb"/>
     </Property>
+    <Property name="title" type="java.lang.String" value="Listado de alumnos por materia - ULP - G73"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
