--- a/src/Vistas/ViewFormularioDeInscripcion.form
+++ b/src/Vistas/ViewFormularioDeInscripcion.form
@@ -5,6 +5,9 @@
     <Component class="javax.swing.ButtonGroup" name="buttonGroup1">
     </Component>
   </NonVisualComponents>
+  <Properties>
+    <Property name="title" type="java.lang.String" value="Formulario de inscripcion - ULP - G73"/>
+  </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
   </SyntheticProperties>
