--- a/src/Vistas/ViewGestionMaterias.form
+++ b/src/Vistas/ViewGestionMaterias.form
@@ -152,7 +152,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTanio">
       <Properties>
-        <Property name="toolTipText" type="java.lang.String" value="Ingrese el nombre de la materia"/>
+        <Property name="toolTipText" type="java.lang.String" value="Ingrese el a&#xf1;o"/>
       </Properties>
       <Events>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTanioKeyReleased"/>
