--- a/src/Vistas/ViewActualizacionDeNotas.form
+++ b/src/Vistas/ViewActualizacionDeNotas.form
@@ -5,6 +5,7 @@
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="0" green="66" red="0" type="rgb"/>
     </Property>
+    <Property name="closable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Carga de notas - ULP - G73"/>
   </Properties>
   <SyntheticProperties>
