--- a/src/Vistas/ViewFormularioDeInscripcion.form
+++ b/src/Vistas/ViewFormularioDeInscripcion.form
@@ -6,6 +6,7 @@
     </Component>
   </NonVisualComponents>
   <Properties>
+    <Property name="closable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Formulario de inscripcion - ULP - G73"/>
   </Properties>
   <SyntheticProperties>
