--- a/src/Vistas/ViewGestionMaterias.form
+++ b/src/Vistas/ViewGestionMaterias.form
@@ -2,6 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JInternalFrameFormInfo">
   <Properties>
+    <Property name="closable" type="boolean" value="true"/>
     <Property name="title" type="java.lang.String" value="Gestion de Materia - ULP - G73"/>
   </Properties>
   <SyntheticProperties>
@@ -136,10 +137,11 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTCodigo">
       <Properties>
-        <Property name="toolTipText" type="java.lang.String" value="Si desea buscar, ingrese el ID de la materia"/>
+        <Property name="toolTipText" type="java.lang.String" value="Ingrese un numero de 4 maximo digitos "/>
       </Properties>
       <Events>
         <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTCodigoKeyReleased"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTCodigoKeyTyped"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTnombre">
